--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>simple-hello-word</module>
+        <module>work-queues</module>
     </modules>
     <name>rabbitmq-demo</name>
     <description>rabbitmq-demo</description>
