publish-subscribe:发布订阅模式：匿名队列、只接受新消息、多个消费者消费同一个消息（日志）

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>simple-hello-word</module>
         <module>work-queues</module>
+        <module>publish-subcribe</module>
     </modules>
     <name>rabbitmq-demo</name>
     <description>rabbitmq-demo</description>
