routing:队列使用路由key与交换机进行绑定（例：不同队列监听不同的日志级别）

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>simple-hello-word</module>
         <module>work-queues</module>
         <module>publish-subcribe</module>
+        <module>routing</module>
     </modules>
     <name>rabbitmq-demo</name>
     <description>rabbitmq-demo</description>
