topics:定义主题交换机、队列通过主题进行绑定交换机

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>work-queues</module>
         <module>publish-subcribe</module>
         <module>routing</module>
+        <module>topics</module>
     </modules>
     <name>rabbitmq-demo</name>
     <description>rabbitmq-demo</description>
