spring:集成Spring、简单队列、手动ACK

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
     <modules>
         <module>simple-hello-word</module>
         <module>work-queues</module>
-        <module>publish-subcribe</module>
+        <module>publish-subscribe</module>
         <module>routing</module>
         <module>topics</module>
+        <module>spring-boot-rabbit</module>
     </modules>
     <name>rabbitmq-demo</name>
     <description>rabbitmq-demo</description>
