--- a/publish-subscribe/pom.xml
+++ b/publish-subscribe/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>publish-subcribe</artifactId>
+    <artifactId>publish-subscribee</artifactId>
     <dependencies>
         <dependency>
             <groupId>ch.qos.logback</groupId>
