spring:集成Spring、主题模式、confirm、returns机制

--- a/spring-boot-rabbit/src/main/resources/application.yaml
+++ b/spring-boot-rabbit/src/main/resources/application.yaml
@@ -5,3 +5,5 @@ spring:
     username: admin
     password: admin
     virtual-host: my_vhost
+    publisher-confirm-type: correlated
+    publisher-returns: true
