--- a/spring-boot-rabbit/pom.xml
+++ b/spring-boot-rabbit/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>spring-boot-rabbit</artifactId>
     <dependencies>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
